--- a/Multi_Linear_Regression_final_update.ipynb
+++ b/Multi_Linear_Regression_final_update.ipynb
@@ -125,6 +125,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "here mpg = dependent variable\n",
+        "hp,vol,sp,wt =independent variable"
+      ],
+      "metadata": {
+        "id": "kMBA6OuYfAgX"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -296,7 +306,7 @@
         }
       ],
       "source": [
-        "cars.corr()"
+        "cars.corr() #here the wt and vol corellation almost equal to 1"
       ]
     },
     {
@@ -348,7 +358,7 @@
       "source": [
         "#Format the plot background and scatter plots for all the variables\n",
         "sns.set_style(style='darkgrid')\n",
-        "sns.pairplot(cars)"
+        "sns.pairplot(cars) #wt and vol scatter plot have very stron positive code"
       ]
     },
     {
@@ -359,6 +369,13 @@
       "source": [
         "# Preparing a model"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "tOAQQduZcWHb"
+      }
     },
     {
       "cell_type": "code",
@@ -453,6 +470,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "here wt and vol have > 0.05 in p values i.e in significant"
+      ],
+      "metadata": {
+        "id": "Lf_lMnVbePxp"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -482,6 +508,17 @@
         "#R squared values\n",
         "(model.rsquared,model.rsquared_adj)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "here total r square value is significant but pvalu greater than 0.05 in wt and vol so we re check it..\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "x-f12HUzecE9"
+      }
     },
     {
       "cell_type": "markdown",
@@ -598,6 +635,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "independently wt and vol less than 0.05 but wt and vol together it greater than 0.05.so we go to variance inflammation factor"
+      ],
+      "metadata": {
+        "id": "MJr5eNUjb3LW"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "LX-580HkqBYW"
       },
@@ -696,6 +742,21 @@
       "source": [
         "# Residual Analysis"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "total 3 method\n",
+        "\n",
+        "1.qq plot\n",
+        "\n",
+        "2.residual plot\n",
+        "\n",
+        "3.residual vs regressors"
+      ],
+      "metadata": {
+        "id": "OgG7CfQuhNst"
+      }
     },
     {
       "cell_type": "markdown",
@@ -804,6 +865,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "here we used z score = (x-u)/sigma\n",
+        "\n",
+        "y=f(x)= (x-u)/sigma\n",
+        "\n",
+        "f = get_standardized_values\n",
+        "\n",
+        "x = vals"
+      ],
+      "metadata": {
+        "id": "qdKrW2nWd77V"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -839,6 +915,31 @@
         "plt.ylabel('Standardized residual values')\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "here no pattern no problem\n",
+        "\n",
+        "zero mean\n",
+        "\n",
+        "constant varience\n",
+        ""
+      ],
+      "metadata": {
+        "id": "VmVZwecrgt92"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "model.fitted value  gives predicted value\n",
+        "\n",
+        "model. resid value gives error value"
+      ],
+      "metadata": {
+        "id": "Jl6ptuStfSn4"
+      }
     },
     {
       "cell_type": "markdown",
@@ -879,8 +980,17 @@
       "source": [
         "fig = plt.figure(figsize=(15,8))\n",
         "fig = sm.graphics.plot_regress_exog(model, \"VOL\", fig=fig)\n",
+        "#here exog = independent variable is called as exogeneous variable\n",
+        "#target variablis indogeneous variabl\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "c2oVheanhhI3"
+      }
     },
     {
       "cell_type": "code",
@@ -914,6 +1024,17 @@
         "fig = sm.graphics.plot_regress_exog(model, \"SP\", fig=fig)\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "residual vs vol .... no pattern no pblm\n",
+        "\n",
+        "partial regression plot .... there is no variability\n"
+      ],
+      "metadata": {
+        "id": "RVgPqpKC2Ia2"
+      }
     },
     {
       "cell_type": "code",
@@ -1021,7 +1142,8 @@
       "outputs": [],
       "source": [
         "model_influence = model.get_influence()\n",
-        "(c, _) = model_influence.cooks_distance"
+        "(c, _) = model_influence.cooks_distance\n",
+        "#c,_ = means (cooksdistance, p_value)here i only need cooks distance"
       ]
     },
     {
@@ -1090,6 +1212,19 @@
         "#index and value of influencer where c is more than .5\n",
         "(np.argmax(c),np.max(c))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "np.max(c) show the max cook distance is 1.0\n",
+        "\n",
+        "np.argmax() show which observation having max cooks distance value\n",
+        "\n",
+        "the first outlier we go 76. because it have cooks distance value of more than 1"
+      ],
+      "metadata": {
+        "id": "kwsk8P2x-HjP"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1165,6 +1300,34 @@
         "leverage_cutoff = 3*((k + 1)/n)\n",
         "leverage_cutoff"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "here after 2 in x axis 70 and 76 outrlier is shown\n",
+        "\n",
+        "shape [0] =81\n",
+        "\n",
+        "shape[1] = 80"
+      ],
+      "metadata": {
+        "id": "3xO_GsBPD_XF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In Python, when you use cars.shape[0], you're accessing the first element of the shape attribute of an array or dataframe named cars. The shape attribute returns a tuple representing the dimensions of the array or dataframe.\n",
+        "\n",
+        "cars.shape[0]: This returns the number of rows in the array or dataframe.\n",
+        "cars.shape[1]: This returns the number of columns (or the second dimension)\n",
+        "\n",
+        " if the array or dataframe has more than one dimension.\n",
+        "For example, if cars is a dataframe with 100 rows and 5 columns, cars.shape would return (100, 5), and cars.shape[0] would return 100"
+      ],
+      "metadata": {
+        "id": "h9f3SdVED1xK"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1373,6 +1536,17 @@
         "#Discard the data points which are influencers and reasign the row number (reset_index())\n",
         "car1=cars_new.drop(cars_new.index[[70,76]],axis=0).reset_index()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "axis =0 row\n",
+        "axis=1 column\n",
+        "rearrange the sequence --- .reset index()"
+      ],
+      "metadata": {
+        "id": "wD2zUApRSHrE"
+      }
     },
     {
       "cell_type": "code",
@@ -1590,8 +1764,28 @@
         }
       ],
       "source": [
-        "(final_ml_V.rsquared,final_ml_V.aic,final_ml_V.bic)"
+        "(final_ml_V.rsquared,final_ml_V.aic,final_ml_V.bic,final_ml_V.rsquared_adj)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "previous\n",
+        "\n",
+        " r2 = .77\n",
+        "\n",
+        "adj r2 =.75\n",
+        "\n",
+        "now\n",
+        "\n",
+        "r2 =.81\n",
+        "\n",
+        "adj r2 = .80\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "lZss0lMlSmTb"
+      }
     },
     {
       "cell_type": "code",
@@ -2952,6 +3146,23 @@
       "source": [
         "pred_y"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "target value (in mlr and slr ) should be continuous\n",
+        "\n",
+        "target value is dependent variable\n",
+        "\n",
+        "error =  actual value - predicted value\n",
+        "\n",
+        "error another name resid\n",
+        "\n",
+        "error depend on dependent variable(target value) it not deepend on independent variable"
+      ],
+      "metadata": {
+        "id": "VgXt_XjTxw89"
+      }
     }
   ],
   "metadata": {
